# bloc-function-demo-py

./: LICENSE  README.md  README.zh-CN.md  compare_operator.py  exchange.py  industry.py  main.py  pyproject.toml  requirements.txt  startup.sh
bloc_node/new_stock/: __init__.py  fake_new_stocks.py  node.py  node_test.py
bloc_node/phone_sms/: __init__.py  node.py  node_test.py
bloc_node/sleep/: __init__.py  milestone.py  node.py  node_test.py
bloc_node/stock_price_monitor/: __init__.py  milestone.py  node.py  node_test.py  random_gen_price.py
sms/: send_sms.py
