[tool.poetry]
name = "stock"
version = "0.1.0"
description = ""
authors = ["pillipanda <pillipanda@126.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
bloc-client = "0.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
